all-Pages_Basics

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">   
     <link rel="stylesheet" href="script.css">
 </head>
-<body class="indexbody">
-    <header class="indexheader">
+<body class="AMbody">
+    <header class="AMheader">
         <div class="flex">
             <div class="_3bars">
                
@@ -20,10 +20,10 @@
                 <nav class="flex ">
                     <div class="left ">
                         <div class="header_options flex just">
-                            <a href="#"><button>HOME</button></a>
+                            <a href="index.html"><button>HOME</button></a>
                             <a href="Project.html"><button>PROJECTS</button></a>
                             <a href="Blogs.html"><button>BLOGS</button></a>
-                            <a href="AboutMe.html"><button>ABOUT</button></a>
+                            <a href="#"><button>ABOUT</button></a>
                             <a href="contacts.html"><button>CONTACTS</button></a>
                         </div>  
                     <!--<div class></div>-->
@@ -32,17 +32,19 @@
             </div>
         </div>
     </header> 
-    <div>
-        <div class="M_Main_DIV">
-            <small >Hey,I am Siddhant</small>
-            <h1 class="M_Main_h1">Lets go out there and help make the world a better place</h1>
-            <small >Welcome to my very first website</samll><br>
-            
-        </div>
-        <div class="M_DIV2 flex ">
-            <button>SEE PROJECTS</button>
-            <button>LEARN MORE</button> 
-        </div>
-    </div>   
+    <div class="AM_MAIN_BODY">
+        <header class="AM_SUB_HEADER">
+            <h1 >A BIT ABOUT ME</h1>
+        </header>
+        <div class="AM_Main_DIV flex">
+            <div class= "">
+                <img src="Images/ME5.png" alt="img" width="320">
+            </div>
+            <div class="AM_Main_TEXT flex">
+
+                <p>Hi there,Siddhant here<br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A porro architecto, nemo dignissimos sequi obcaecati quia. Cupiditate esse sit aliquam aliquid at quod aperiam iste culpa impedit. Velit, natus ipsa.</p>
+            </div>
+        </div>  
+    </div> 
 </body>
 </html>
