--- a/contacts.html
+++ b/contacts.html
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">   
     <link rel="stylesheet" href="script.css">
 </head>
-<body class="indexbody">
-    <header class="indexheader">
+<body class="CMbody">
+    <header class="CMheader">
         <div class="flex">
             <div class="_3bars">
                
@@ -20,11 +20,11 @@
                 <nav class="flex ">
                     <div class="left ">
                         <div class="header_options flex just">
-                            <a href="#"><button>HOME</button></a>
+                            <a href="index.html"><button>HOME</button></a>
                             <a href="Project.html"><button>PROJECTS</button></a>
                             <a href="Blogs.html"><button>BLOGS</button></a>
                             <a href="AboutMe.html"><button>ABOUT</button></a>
-                            <a href="contacts.html"><button>CONTACTS</button></a>
+                            <a href="#"><button>CONTACTS</button></a>
                         </div>  
                     <!--<div class></div>-->
                     </div>
@@ -32,17 +32,28 @@
             </div>
         </div>
     </header> 
-    <div>
-        <div class="M_Main_DIV">
-            <small >Hey,I am Siddhant</small>
-            <h1 class="M_Main_h1">Lets go out there and help make the world a better place</h1>
-            <small >Welcome to my very first website</samll><br>
-            
+    <div class="AM_MAIN_BODY">
+        <header class="CM_SUB_HEADER">
+            <h1>Contacts:</h1>
+        </header>
+        <div class="CM_Main_DIV flex">
+            <div class="CM_Main_TEXT flex">
+                <h4>Phone numbers : 91 84xxxxxxxx<br><br>
+                Email Address : siddhant.nawale@gamil.com<br><br>
+                Linkedin ID : <a href="Linkedin.com/in/siddhant-nawale-256305174/">siddhant-nawale-256305174/</a>
+                </h4>
+            </div>
+        </div>  
+        <hr class="C">
+        <div class="form flex">
+            <form action="" method="get" class="C"> 
+                <label>Enter Your Name : </label><input type="text" name="Name"><br>
+                <label>Enter Your Email : </label><input type="email" name="Email"><br>
+                <label>Enter Your Imformation : </label><input type="text" name="About You"><br>
+                <label>Enter Your Message : </label><textarea></textarea><br><br>
+                <input type="submit" name="submit"><br>
+            </form>
         </div>
-        <div class="M_DIV2 flex ">
-            <button>SEE PROJECTS</button>
-            <button>LEARN MORE</button> 
-        </div>
-    </div>   
+    </div> 
 </body>
 </html>
