--- a/AboutMe.html
+++ b/AboutMe.html
@@ -22,7 +22,7 @@
                         <div class="header_options flex just">
                             <a href="index.html"><button>HOME</button></a>
                             <a href="Project.html"><button>PROJECTS</button></a>
-                            <a href="Blogs.html"><button>BLOGS</button></a>
+                            <a href="Skills.html"><button>SKILLS</button></a>
                             <a href="#"><button>ABOUT</button></a>
                             <a href="contacts.html"><button>CONTACTS</button></a>
                         </div>  
@@ -42,7 +42,8 @@
             </div>
             <div class="AM_Main_TEXT flex">
 
-                <p>Hi there,Siddhant here<br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A porro architecto, nemo dignissimos sequi obcaecati quia. Cupiditate esse sit aliquam aliquid at quod aperiam iste culpa impedit. Velit, natus ipsa.</p>
+                <p>Hi, Siddhant here<br>I am a computer science student at vit pune, I study in second year.To tell the truth I pretty much am an introvert, But when it comes to food I can make an exception.I also like to code stuff, debug stuff, so I basically like making new software, small they might be, when you make them by yourself they truly make you happy.Try it some time!!!
+                </p>
             </div>
         </div>  
     </div> 
