--- a/Project.html
+++ b/Project.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">   
     <link rel="stylesheet" href="script.css">
 </head>
-<body class="CMbody">
+<body class="PMbody">
     <header class="CMheader">
         <div class="flex">
             <div class="_3bars">
@@ -22,7 +22,7 @@
                         <div class="header_options flex just">
                             <a href="index.html"><button>HOME</button></a>
                             <a href="#"><button>PROJECTS</button></a>
-                            <a href="Blogs.html"><button>BLOGS</button></a>
+                            <a href="Skills.html"><button>SKILLS</button></a>
                             <a href="AboutMe.html"><button>ABOUT</button></a>
                             <a href="contacts.html"><button>CONTACTS</button></a>
                         </div>  
@@ -36,11 +36,44 @@
         <header class="PM_SUB_HEADER">
             <h1>Projects:</h1>
         </header>
-        <div class="PM_Main_DIV flex">
-            <div class="PM_Main_TEXT flex">
-                
+            <div class="flex ">
+                <div class="projects1 border a glow">
+                <a href="./index.html">
+                <div class="pad10">
+                    <h1>PORTFOLIO WEBSITE</h1>
+                    <p>This is basically the same site you are viewing right now. I just put it here so that you guys know all my Exploits</p>
+                    <a href="./index.html"><u>Click Here</u></a>
+                </div>
+                </a>
+                </div>
+                <div class="proj_im"></div>
             </div>
-        </div>  
-    </div> 
+            <div class="flex ">
+                <div class="proj_im"></div>
+                <div class="projects2 border a glow">
+                <a href="https://search-bar-cards.netlify.app/">
+                <div class="pad10">
+                    <h1>React App: Variable Cards with a Search Bar</h1>
+                    <p>There are pre initiallised cards. As we change the text inside the search bar. The related Cards appear. </p>
+                    <div class="g">
+                    <a href="https://search-bar-cards.netlify.app/"><u class="g">Click Here</u></a>
+                    </div>
+                </div>
+                </a>
+                </div>
+            </div>
+            <div class="flex ">
+                <div class="projects1 border a glow">
+                <a href="https://siddhant-nawale.github.io/IEEE-Avenir-Avenue/">
+                <div class="pad10">
+                    <h1>A Website made for IEEE Competition AVNIR</h1>
+                    <p>This is a website that i made in an IEEE competition named as AVINER. We had 2 Days to make a HTML and CSS website with some rules about what feature we can or cannot use and i made this.</p>
+                    <a href="https://siddhant-nawale.github.io/IEEE-Avenir-Avenue/"><u>Click Here</u></a>
+                </div>
+                </a>
+                </div>
+                <div class="proj_im"></div>
+            </div>
+    </div>  
 </body>
 </html>
