--- a/contacts.html
+++ b/contacts.html
@@ -22,7 +22,7 @@
                         <div class="header_options flex just">
                             <a href="index.html"><button>HOME</button></a>
                             <a href="Project.html"><button>PROJECTS</button></a>
-                            <a href="Blogs.html"><button>BLOGS</button></a>
+                            <a href="Skills.html"><button>SKILLS</button></a>
                             <a href="AboutMe.html"><button>ABOUT</button></a>
                             <a href="#"><button>CONTACTS</button></a>
                         </div>  
