--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1,user-scalable=no">
     <title>MY PORTFOLIO</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">   
-    <link rel="stylesheet" href="script.css">
+    <link rel = "preconnect" href="https://fonts.googleapis.com">
+    <link rel = "preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href = "https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">   
+    <link rel = "stylesheet" href="script.css">
 </head>
 <body class="indexbody">
     <header class="indexheader">
@@ -18,16 +18,13 @@
             </div>
             <div class="main_head_box ">
                 <nav class="flex ">
-                    <div class="left ">
-                        <div class="header_options flex just">
-                            <a href="#"><button>HOME</button></a>
-                            <a href="Project.html"><button>PROJECTS</button></a>
-                            <a href="Blogs.html"><button>BLOGS</button></a>
-                            <a href="AboutMe.html"><button>ABOUT</button></a>
-                            <a href="contacts.html"><button>CONTACTS</button></a>
-                        </div>  
-                    <!--<div class></div>-->
-                    </div>
+                    <div class="header_options flex just">
+                        <a href="#"><button>HOME</button></a>
+                        <a href="Project.html"><button>PROJECTS</button></a>
+                        <a href="Skills.html"><button>SKILLS</button></a>
+                        <a href="AboutMe.html"><button>ABOUT</button></a>
+                        <a href="contacts.html"><button>CONTACTS</button></a>
+                    </div> 
                 </nav>
             </div>
         </div>
@@ -39,9 +36,9 @@
             <small >Welcome to my very first website</samll><br>
             
         </div>
-        <div class="M_DIV2 flex ">
-            <button>SEE PROJECTS</button>
-            <button>LEARN MORE</button> 
+        <div class="M_DIV2  ">
+            <a href="Project.html"><button>SEE PROJECTS</button></a>
+            <a href="AboutMe.html"><button>LEARN MORE</button> 
         </div>
     </div>   
 </body>
