--- a/Skills.html
+++ b/Skills.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">   
     <link rel="stylesheet" href="script.css">
 </head>
-<body class="CMbody">
+<body class="SMbody">
     <header class="CMheader">
         <div class="flex">
             <div class="_3bars">
@@ -22,7 +22,7 @@
                         <div class="header_options flex just">
                             <a href="index.html"><button>HOME</button></a>
                             <a href="Project.html"><button>PROJECTS</button></a>
-                            <a href="#"><button>BLOGS</button></a>
+                            <a href="#"><button>SKILLS</button></a>
                             <a href="AboutMe.html"><button>ABOUT</button></a>
                             <a href="contacts.html"><button>CONTACTS</button></a>
                         </div>  
@@ -34,11 +34,30 @@
     </header> 
     <div class="PM_MAIN_BODY">
         <header class="PM_SUB_HEADER">
-            <h1>BLOGS:</h1>
+            <h1>SKILLS:</h1>
         </header>
         <div class="PM_Main_DIV flex">
             <div class="PM_Main_TEXT flex">
-                
+                <div class="skills">
+                    <h2><br><u>Technical Skills</u> :-</h2>
+                    <ul>
+                    <li><label>C: 80%</label>
+                    <br>
+                    <progress class="progress" value="90" max="100" data-text="90" height="100px"></progress></li>
+                    <li><label>C++: 70%</label>
+                    <br>
+                    <progress class="progress" value="90" max="100" data-text="90" height="100px"></progress></li>
+                    <li><label>Python: 85%</label>
+                    <br>
+                    <progress class="progress" value="85" max="100" data-text="85" height="100px"></progress></li>
+                    <li><label>HTML: 80%</label>
+                    <br>
+                    <progress class="progress" value="80" max="100" data-text="80" height="100px"></progress></li>
+                    <li><label>CSS: 80%</label>
+                    <br>
+                    <progress class="progress" value="80" max="100" data-text="80" height="100px"></progress></li>
+                    </ul><br><br><hr>
+                </div>
             </div>
         </div>  
     </div> 
